web/app/themes/cfs/assets/styles/pages/_home.scss
// Homepage header
.page-header.homepage {
  .page-intro {
    color: $white;
    padding: 200px mobile-grid(2) mobile-grid(5) mobile-grid(5);
  }

  @include media-md {
    margin-right: columns(1);
    .page-intro {
      padding: 170px columns(1,18) $global-padding columns(1,18);
      h1 {
        margin: 0;
        width: columns(7,16);
        min-width: 430px;
      }
      p {
        margin: 0;
      }
      .page-content {
        padding: grid(4) 0 0 columns(2,16);
        .p-intro {
          padding-right: columns(1,16);
        }
      }
    }
    // Red bar at right
    @include bar('right', $red, 18);
  }
}


// Homepage featured posts
.home.page {
  .featured {
    background: $black;
    border-left: mobile-grid(2) solid $black;
    border-right: mobile-grid(2) solid $black;

    @include media-md {
      border: none;
      margin-left: columns(2);
      .button.-red:hover {
        color: $black;
      }
    }
  }

  // Shared featured post styles
  .feature {
    position: relative;
    background: $black;
    padding: mobile-grid(5) mobile-grid(3) mobile-grid(1);
    .image {
      @include aspect-ratio(480, 324);
      margin-bottom: mobile-grid(2);
      box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
    }
    h1 {
      color: $red;
      margin-bottom: mobile-grid(1);
    }
    p {
      color: $white;
    }

    @include media-md {
      padding: 0;
      margin: 0 0 0 columns(1,18);
      >.wrap {
        padding: grid(4) columns(2,17) grid(4) columns(1,17);
      }
      .image {
        margin: 0 $gutter 0 0;
      }
    }

    // Featured Program
    &.program-post {
      background: $red;
      padding-bottom: mobile-grid(5);
      h1 {
        color: $white;
      }

      @include media-md {
        padding: grid(4) columns(1,18) grid(4) 0;
        margin: 0 0 0 columns(1,18);
        >.wrap {
          padding: 0 columns(1,16);
        }
      }
    }

    // Featured Custom Link
    &.custom-link {
      // Reorder image & details on smaller screens
      @include max-screen($breakpoint-md) {
        .grid {
          display: flex;
          flex-direction: column;
        }
        .one-half {
          &.-left {
            order: 2;
          }
          &.-right {
            order: 1;
          }
        }
      }

      @include media-md {
        .image {
          margin: 0;
        }
        .details {
          padding: 0 $gutter 0 0;
        }
      }
    }

    // Featured Workshop
    &.workshop-post {
      >.wrap {
        padding-top: 0;
        padding-bottom: grid(1);
      }
    }
  }
}

